--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,21 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=cluster0.0dzs7.mongodb.net
+#spring.data.mongodb.uri=mongodb+srv://divan42:root@cluster0.0dzs7.mongodb.net/stuff?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://divan42:root@cluster0.mazy7.mongodb.net/stuff?retryWrites=true&w=majority
+
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=stuff
+#spring.data.mongodb.username=divan42
+#spring.data.mongodb.password=root
+#spring.data.mongodb.database=test
+
+
+
+#
+#MongoClientURI uri = new MongoClientURI(
+#"mongodb+srv://divan42:root@cluster0.0dzs7.mongodb.net/stuff?retryWrites=true&w=majority");
+#
+#MongoClient mongoClient = new MongoClient(uri);
+#MongoDatabase database = mongoClient.getDatabase("test");
