need to be fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb+srv://divan42:root@cluster0.mazy7.mongodb.net/stuff?retryWrites=true&w=majority
+#spring.data.mongodb.port=27017
 spring.data.mongodb.database=stuff
